--- a/analytics.html
+++ b/analytics.html
@@ -28,6 +28,13 @@
                 <a href="#pelanggan" class="nav-link flex items-center py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg"><i data-lucide="users" class="w-5 h-5 mr-3"></i> Pelanggan</a>
                 <a href="#pengeluaran" class="nav-link flex items-center py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg"><i data-lucide="trending-down" class="w-5 h-5 mr-3"></i> Pengeluaran</a>
             </nav>
+            <!-- Tombol Kembali Ditambahkan di Sini -->
+            <div class="mt-auto">
+                 <a href="index.html" class="flex items-center py-2 px-4 text-gray-600 hover:bg-gray-100 rounded-lg">
+                    <i data-lucide="arrow-left" class="w-5 h-5 mr-3"></i>
+                    Kembali
+                </a>
+            </div>
         </aside>
 
         <main class="flex-1 p-4 md:p-8 overflow-y-auto">
