--- a/analytics.html
+++ b/analytics.html
@@ -19,8 +19,8 @@
 </head>
 <body class="text-gray-800">
 
-    <div id="app-container" class="flex min-h-screen">
-        <aside class="w-64 bg-white shadow-md flex-col p-4 hidden md:flex">
+    <div id="app-container" class="flex">
+        <aside class="w-64 bg-white shadow-md flex-col p-4 hidden md:flex h-screen sticky top-0">
             <div class="p-4 mb-4"><h1 class="text-2xl font-bold text-indigo-600">Analytics</h1><p class="text-sm text-gray-500">JagaNetwork Platform</p></div>
             <nav id="sidebar-nav" class="flex-1 space-y-2">
                 <a href="#ringkasan" class="nav-link nav-active flex items-center py-2 px-4 text-gray-700 rounded-lg"><i data-lucide="bar-chart-2" class="w-5 h-5 mr-3"></i> Ringkasan</a>
@@ -196,3 +196,4 @@
     </script>
 </body>
 </html>
+
