--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <a href="#" id="tab-laporan" class="tab-item flex items-center py-3 px-6 text-gray-600 hover:bg-indigo-50">
                     <i data-lucide="line-chart" class="w-5 h-5 mr-3"></i> Laporan Keuangan
                 </a>
-                <a href="analytics.html" target="_blank" rel="noopener noreferrer" class="flex items-center py-3 px-6 text-gray-600 hover:bg-indigo-50">
+                <a href="analytics.html" class="flex items-center py-3 px-6 text-gray-600 hover:bg-indigo-50">
                     <i data-lucide="bar-chart-3" class="w-5 h-5 mr-3"></i> Analytics
                 </a>
             </nav>
@@ -1746,3 +1746,4 @@
     </script>
 </body>
 </html>
+
