--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                  <a href="#" id="tab-blog" class="tab-item flex items-center py-3 px-6 text-gray-600 hover:bg-indigo-50">
                     <i data-lucide="newspaper" class="w-5 h-5 mr-3"></i> Blog
                 </a>
+                <!-- MENU KALENDER BARU -->
+                <a href="kalender.html" class="flex items-center py-3 px-6 text-gray-600 hover:bg-indigo-50">
+                    <i data-lucide="calendar" class="w-5 h-5 mr-3"></i> Kalender
+                </a>
             </nav>
             <div class="p-6">
                 <button id="btn-logout" class="w-full flex items-center justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700">
@@ -2399,4 +2403,3 @@
     </script>
 </body>
 </html>
-
