--- a/kalender.html
+++ b/kalender.html
@@ -66,9 +66,14 @@
                 <h1 class="text-3xl font-bold text-indigo-600">Kalender Acara</h1>
                 <p class="text-gray-500 mt-1">Kelola jadwal, janji temu, dan agenda penting Anda.</p>
             </div>
-            <button id="add-event-button" class="w-full sm:w-auto bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 flex items-center justify-center shadow-sm">
-                <i data-lucide="plus" class="w-5 h-5 mr-2"></i> Tambah Acara Baru
-            </button>
+            <div class="flex flex-col sm:flex-row gap-2 w-full sm:w-auto">
+                 <a href="index.html" class="w-full sm:w-auto bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 flex items-center justify-center shadow-sm">
+                    <i data-lucide="arrow-left" class="w-5 h-5 mr-2"></i> Kembali ke Beranda
+                </a>
+                <button id="add-event-button" class="w-full sm:w-auto bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 flex items-center justify-center shadow-sm">
+                    <i data-lucide="plus" class="w-5 h-5 mr-2"></i> Tambah Acara Baru
+                </button>
+            </div>
         </header>
 
         <!-- Calendar Container -->
